ribbon_parser/src/snapshots/ribbon_parser__test__plain_function.snap
---
source: ribbon_parser/src/test.rs
description: "() => {}"
expression: "& program"
---
body:
  - kind:
      FunctionDeclaration:
        parameters: []
        generic_parameters: []
        return_type: ~
        body:
          kind:
            Block: []
          span:
            low: 6
            hi: 7
    span:
      low: 0
      hi: 7
diagnostics: []
