ribbon_parser/src/snapshots/ribbon_parser__test__simple_enum.snap
---
source: ribbon_parser/src/test.rs
description: "enum { Variant1, Variant2 }"
---
body:
  - kind:
      Enum:
        variants:
          - kind:
              Ident: Variant1
            span:
              low: 7
              hi: 14
          - kind:
              Ident: Variant2
            span:
              low: 17
              hi: 24
    span:
      low: 0
      hi: 26
diagnostics: []
