ribbon_parser/src/snapshots/ribbon_parser__test__single_element_tuple.snap
---
source: ribbon_parser/src/test.rs
description: ()
---
body:
  - kind:
      Tuple: []
    span:
      low: 0
      hi: 1
diagnostics: []
