ribbon_parser/src/snapshots/ribbon_parser__test__single_element_tuple_trailing_comma.snap
---
source: ribbon_parser/src/test.rs
description: "(1,)"
---
body:
  - kind:
      Tuple:
        - kind:
            Lit:
              Int: 1
          span:
            low: 1
            hi: 1
    span:
      low: 0
      hi: 3
diagnostics: []
