ribbon_parser/src/snapshots/ribbon_parser__test__unclosed_tuple.snap
---
source: ribbon_parser/src/test.rs
description: "(1,2"
---
body:
  - kind:
      Tuple:
        - kind:
            Lit:
              Int: 1
          span:
            low: 1
            hi: 1
        - kind:
            Lit:
              Int: 2
          span:
            low: 3
            hi: 3
    span:
      low: 0
      hi: 3
diagnostics:
  - kind:
      Error:
        ExpectedOneOfXFoundY:
          - - Op: Comma
            - Op: RParen
          - kind: Eof
            source: ""
            span:
              low: 3
              hi: 3
    span:
      low: 3
      hi: 3
    subdiagnostics: []
  - kind:
      Error: UnclosedDelimitedExpression
    span:
      low: 0
      hi: 3
    subdiagnostics:
      - kind:
          Info: DelimitedExpressionBeginsHere
        span:
          low: 0
          hi: 0
        subdiagnostics: []
